[package]
name = "hello_world_in_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = "0.11.0"
serde = "1.0.217"
serde_json = "1.0.138"
stylist = { version = "0.13.0", features = ["yew"] }
wasm-bindgen = "0.2.100"
web-sys =  { version = "0.3.77", features = ["HtmlInputElement"] }
yew =  { version =  "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
